# pchain-compile

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docker_image/: Dockerfile
src/: build.rs  cargo.rs  config.rs  docker.rs  error.rs  lib.rs  main.rs  manifests.rs  processes.rs
src/operations/: build.rs  mod.rs
tests/: test.rs
tests/contracts/hello_contract/: Cargo.toml
tests/contracts/hello_contract/src/: lib.rs
