[package]
name = "pchain_compile"
version = "0.4.0"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "ParallelChain Smart Contract Compile CLI - A command line tool for compiling ParallelChain Smart Contract."
license = "Apache-2.0"

[[bin]]
name = "pchain_compile"

[dependencies]
clap = {version = "3.1.5", features = ["derive"]}
cargo_toml = "0.11.5"
dunce = "1.0.2"
faccess = "0.2.4"
rand = "0.6.0"
thiserror = "1.0.31"
tokio = {version = "1.19", features = ["full"]}
wasm-snip = "0.4.0"

