[package]
name = "pchain_compile"
version = "0.4.2"
authors = ["ParallelChain Lab <info@parallelchain.io>"]
edition = "2021"
description = "ParallelChain Smart Contract Compile CLI - A command line tool for compiling ParallelChain Smart Contract."
license = "Apache-2.0"
repository = "https://github.com/parallelchain-io/pchain-compile"

[lib]
name = "pchain_compile"
path = "src/lib.rs"

[[bin]]
name = "pchain_compile"
path = "src/bin/main.rs"

[dependencies]
bollard = "0.14.0"
clap = {version = "4.3.11", features = ["derive"]}
cargo = "0.72.2"
cargo_toml = "0.11.5"
dunce = "1.0.2"
faccess = "0.2.4"
rand = "0.6.0"
thiserror = "1.0.31"
tokio = {version = "1.19", features = ["full"]}
wasm-snip = "=0.4.0"
futures-util = "0.3.28"
flate2 = "1.0.26"
tar = "0.4.38"
wasm-opt = "=0.114.0"
walrus = "=0.12"